# no_english_mode

./: Cargo.toml  README.md  build.rs  copy_to_startup.bat
assets/: app.rc  app.res
src/: main.rs
